Refactoring and final touches before Coding Ninja submission.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             crossorigin="anonymous"
         ></script>
 
+        <!-- Favicon imports -->
+        <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+
         <!-- JS imports -->
         <!-- DATA Model imports-->
         <script src="assets/data/artists-data.js" defer></script>
